feat(sdk nbtc): publish TS SDK to npm with automated workflow (#304)
* publish package

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add author

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update build

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* tiny update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update bun with hash

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* bun ci

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* fmt

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add gen ts

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update package

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* add workflow_dispatch back

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* update right url

Signed-off-by: Vu Vo <vu.voth@gmail.com>

* Update sdk/nBTC/package.json

Co-authored-by: Robert Zaremba <robert@zaremba.ch>
Signed-off-by: vuvoth <vu.voth@gmail.com>

* update

Signed-off-by: Vu Vo <vu.voth@gmail.com>

---------

Signed-off-by: Vu Vo <vu.voth@gmail.com>
Signed-off-by: vuvoth <vu.voth@gmail.com>
Co-authored-by: Robert Zaremba <robert@zaremba.ch>

--- a/sdk/nBTC/package.json
+++ b/sdk/nBTC/package.json
@@ -1,13 +1,37 @@
 {
-	"name": "nbtc",
-	"module": "src/index.ts",
+	"name": "@sui-native/nbtc",
+	"version": "0.1.0",
+	"description": "TypeScript SDK for nBTC on Sui blockchain",
 	"type": "module",
-	"private": true,
+	"main": "./dist/index.js",
+	"types": "./dist/src/index.d.ts",
+	"files": [
+		"dist",
+		"README.md"
+	],
+	"scripts": {
+		"build": "rm -rf dist && bun build src/index.ts --outdir dist --target node --format esm && tsc --declaration --emitDeclarationOnly -p tsconfig.json",
+		"prepublishOnly": "bun run build"
+	},
+	"publishConfig": {
+		"access": "public"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/gonative-cc/sui-native.git"
+	},
+	"author": "Native",
+	"license": "MPL-2.0",
+	"bugs": {
+		"url": "https://github.com/gonative-cc/sui-native/issues"
+	},
+	"homepage": "https://github.com/gonative-cc/sui-native#readme",
 	"dependencies": {
 		"@mysten/sui": "^1.45.0"
 	},
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"typescript": "^5.9.3"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
