update encode sk to wallet sk
Signed-off-by: Vu Vo <vu.voth@gmail.com>

--- a/bitcoin_spv/scripts/.env.example
+++ b/bitcoin_spv/scripts/.env.example
@@ -1,6 +1,6 @@
 # Sui wallet credentials (one of these is required)
 MNEMONIC='your mnemonic here'
-# ENCODE_SK='base64-encoded private key'
+# WALLET_SK='base64-encoded private key'
 
 # NOTE: All other configuration has been moved to config.ts for better type safety
 # Please edit config.ts to update package IDs, network settings, and block headers
