--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # Sui wallet credentials (one of these is required)
 MNEMONIC='your mnemonic here'
-# ENCODE_SK='base64-encoded private key'
+# WALLET_SK='base64-encoded private key'
 
 # Bitcoin Esplora Indexer URL
 INDEXER_URL='http://localhost:8080/regtest'
